--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fuga quos rerum doloribus error sunt fugiat minus quaerat, est dignissimos laboriosam cupiditate qui eius? Placeat, provident? Sed eum dignissimos sapiente corrupti possimus unde quis voluptate laudantium cupiditate.</p>
         </div>
         <div class="home-right">
-            <img src="/images/arafat-1.jpg"  class="my-img" width="55%">
+            <img src="images/arafat-1.jpg"  class="my-img" width="55%">
         </div>
     </div>
     <div class="download">
-        <a href="/download/pdf-download.pdf" download="project.pdf"><i class="fas fa-cloud-download-alt"></i>Download Project</a>
+        <a href="download/pdf-download.pdf" download="project.pdf"><i class="fas fa-cloud-download-alt"></i>Download Project</a>
     </div>
     </div>
     
