--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem fuga quos rerum doloribus error sunt fugiat minus quaerat, est dignissimos laboriosam cupiditate qui eius? Placeat, provident? Sed eum dignissimos sapiente corrupti possimus unde quis voluptate laudantium cupiditate.</p>
         </div>
         <div class="home-right">
-            <img src="images/arafat-1.jpg"  class="my-img" width="55%">
+            <img src="arafat-1.jpg"  class="my-img" width="55%">
         </div>
     </div>
     <div class="download">
@@ -87,7 +87,6 @@
     <div id="contact">
     <div class="contact-me">
         <h2>Contact With Me</h2>
-        <hr>
     <a href="https://www.facebook.com/arafath.islam.9659"><i class="fab fa-facebook-square"></i></a>
     <a href="https://www.instagram.com/antimarafat/"><i class="fab fa-instagram"></i></a>
     <a href="#"><i class="fab fa-twitter-square"></i></a>
